BACKLOG-19858: Fix alignment of grid and spacing

--- a/src/javascript/SelectorTypes/Picker/PickerDialog/RightPanel/ContentLayout/FilesGrid/FilesGrid.scss
+++ b/src/javascript/SelectorTypes/Picker/PickerDialog/RightPanel/ContentLayout/FilesGrid/FilesGrid.scss
@@ -22,7 +22,7 @@
     display: grid;
     flex: 1;
     gap: var(--spacing-medium);
-    justify-content: space-evenly;
+    justify-content: center;
     align-content: start;
     align-items: start;
     margin: var(--spacing-small);
